--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>task2</title>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-     -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <div class="content">
+
         <svg version="1.1" id="transring" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 414 414"
                 style="enable-background:new 0 0 414 414; " xml:space="preserve">
 
                 <path id="Transparent_Ring" class="transrg"
-                    style="opacity:0.4;fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;enable-background:new"
+                    style="opacity:0.4;fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:2;enable-background:new"
                     d="M84.2,85c31.3-31.5,74.7-51,122.7-51c95.5,0,173,77.5,173,173s-77.5,173-173,173
                 c-47.8,0-91-19.4-122.3-50.7"></path>
 
@@ -110,16 +112,32 @@
 
         <div id="page1" class="pages">
             <div></div>
-            <div></div>
+            <div><h1>page1</h1></div>
         </div>
-        <!-- <div id="page2" class="pages">
+        <div id="page2" class="pages">
             <div></div>
-            <div></div>
+            <div><h1>page2</h1></div>
         </div>
-        <div id="page1" class="pages">
+        <div id="page3" class="pages">
             <div></div>
+            <div><h1>page3</h1></div>
+        </div>
+        <div id="page4" class="pages">
             <div></div>
-        </div> -->
+            <div><h1>page4</h1></div>
+        </div>
+        <div id="page5" class="pages">
+            <div></div>
+            <div><h1>page5</h1></div>
+        </div>
+        <div id="page6" class="pages">
+            <div></div>
+            <div><h1>page6</h1></div>
+        </div>
+        <div id="page7" class="pages">
+            <div></div>
+            <div><h1>page7</h1></div>
+        </div>
     </div>
     <script src="./js/script.js"></script>
 </body>
