--- a/index.html
+++ b/index.html
@@ -109,35 +109,146 @@
                     </g>
                 </g>
             </svg>
+        
+        <div class="container">
+            <div id="left_container">
+            </div>
+            <div  id="pageContentContainer">
+                <div id="page1Content" class="pageContent">
+                    <h1>25M+ Downloads</h1>
+                    <h5>on appstore & google playstore</h5>
+                    <div>
+                        <h1>ABC 678</h1>
+                        <span>Best since 2017</span>
+                        <span>We offer wide range of</span>
+                        <span>web development and app development.</span>
+                        <div>
+                        <a href="">View Case Study &rarr;</a> <span>SKIP</span>
+                        </div>
+                    </div>
+                </div>
+                <div id="page2Content" class="pageContent hide">
+                    <h5>The Next Big</h5>
+                    <h1>Blockchain</h1>
+                    <h5>Revolution</h5>
+                    <div>
+                        <h1>ABC 234</h1>
+                        <span>We are the best web development</span>
+                        <span>company in the world</span>
+                        <div>
+                        <a href="" style="filter: opacity(0.5);">Comming Soon</a> <span>SKIP</span>
+                        </div>
+                    </div>
+                </div>
+                <div id="page3Content" class="pageContent hide">
+                    <h5>Powered by advance</h5>
+                    <img src="./assets/nasa-mobile-app.png" alt="">
+                    <h5>algorithms</h5>
+                    <div>
+                        <h1>ABC 345</h1>
+                        <span>We are the best company</span>
+                        <span>in the world</span>
+                        <div>
+                        <a href="" style="filter: opacity(0.5);">Comming Soon</a> <span>SKIP</span>
+                        </div>
+                    </div>
+                </div>
+                <div id="page4Content" class="pageContent hide">
+                    <h5>Biggest Classifieds</h5>
+                    <h1>East Asia</h1>
+                    <h5>Countries</h5>
+                    <div>
+                        <img src="./assets/mobile-app-of-the-year-by-entrepreneur.png" alt="">
+                        <h1>ABC 23478</h1>
+                        <span>We are the best</span>
+                        <span>Web development company</span>
+                        <span>in the world</span>
+                        <div>
+                        <a href="" style="filter: opacity(0.5);">Comming Soon</a> <span>SKIP</span>
+                        </div>
+                    </div>
+                </div>
+                <div id="page5Content" class="pageContent hide">
+                    <h5>Text Headline</h5>
+                    <h1>Text Headline</h1>
+                    <h5>Footer headline</h5>
+                    <div>
+                        <h1>ABC 567</h1>
+                        <span>We are the best AR</span>
+                        <span>Development company</span>
+                        <span>in the world</span>
+                        <div>
+                        <a href="" style="filter: opacity(0.5);">Comming Soon</a> <span>SKIP</span>
+                        </div>
+                    </div>
+                </div>
+                <div id="page6Content" class="pageContent hide">
+                    <h5>Redefining</h5>
+                    <h1>UX Strategy</h1>
+                    <h5>and UI design</h5>
+                    <div>
+                        <h1>ABC 456</h1>
+                        <span>We are the best </span>
+                        <span>Development company</span>
+                        <span>in the world</span>
+                        <div>
+                        <a href="" style="filter: opacity(0.5);">Comming Soon</a> <span>SKIP</span>
+                        </div>
+                    </div>
+                </div>
+                <div id="page7Content" class="pageContent hide">
+                    <h5>Developing ERP Solution for</h5>
+                    <h1>Text Headline</h1>
+                    <h5>in furniture industry</h5>
+                    <div>
+                        <h1>ABC 678</h1>
+                        <span>Best since 2017 </span>
+                        <span>We offer wide range of</span>
+                        <span>web development and app development</span>
+                        <div>
+                        <a href="" style="filter: opacity(0.5);">Comming Soon</a> <span>SKIP</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="right_container">
+                <div id="page1" class="pages">
+                    <img src="./assets/nexgtv-entertainment-mobile-app-development.png" alt="">
+                    <img src="./assets/nexgtv-mobile-app-ui-design.png" alt="">
+                </div>
+                <div id="page2" class="pages">
+                    <img src="./assets/veme-blockchain-app-developed.png" alt="">
+                    <img src="./assets/veme-app-ui-design.png" alt="">
+                </div>
+                <div id="page3" class="pages">
+                    <img src="./assets/nasa-fitness-tracking-mobile-app.png" alt="">
+                    <img src="./assets/measure-total-body-weight-through-fitness-app.png" alt="">
+                </div>
+                <div id="page4" class="pages">
+                    <img src="./assets/melltoo-img2.png" alt="">
+                    <img src="./assets/melltoo-img1.png" alt="">
+                </div>
+                <div id="page5" class="pages">
+                    <img src="./assets/karavan-social-networking-app-screen.png" alt="">
+                    <img src="./assets/social-networking-app-case-study.png" alt="">
+                    <img src="./assets/developers-for-social-media-app.png" alt="">
+                    <img src="./assets/karavan_2.png" alt="">
+                    <img src="./assets/karavan-social-networking-app-screen-2.png" alt="">
+                </div>
+                <div id="page6" class="pages">
+                    <img src="./assets/pizza_box.png" alt="">
+                    <img src="./assets/ux-strategy-for-mobile-app-devlopment.png" alt="">
+                    <img src="./assets/dominos-bread.png" alt="">
+                    <img src="./assets/domi-img1.png" alt="">
+                    <img src="./assets/dominos-bread1.png" alt="">
+                </div>
+                <div id="page7" class="pages">
+                    <img src="./assets/erp-app-development-service.png" alt="">
+                </div>
 
-        <div id="page1" class="pages">
-            <div></div>
-            <div><h1>page1</h1></div>
+            </div>
         </div>
-        <div id="page2" class="pages">
-            <div></div>
-            <div><h1>page2</h1></div>
-        </div>
-        <div id="page3" class="pages">
-            <div></div>
-            <div><h1>page3</h1></div>
-        </div>
-        <div id="page4" class="pages">
-            <div></div>
-            <div><h1>page4</h1></div>
-        </div>
-        <div id="page5" class="pages">
-            <div></div>
-            <div><h1>page5</h1></div>
-        </div>
-        <div id="page6" class="pages">
-            <div></div>
-            <div><h1>page6</h1></div>
-        </div>
-        <div id="page7" class="pages">
-            <div></div>
-            <div><h1>page7</h1></div>
-        </div>
+        
     </div>
     <script src="./js/script.js"></script>
 </body>
