--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive_style.css">
   <link rel="stylesheet" href="./css/mob_style.css">
+  <link rel="stylesheet" href="./css/responsive_mob.css">
 </head>
 
 <body>
