--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
         loop: true,
         margin: 10,
         dots: true, // Enable dots (pagination)
-        // autoplay: true, // Enable autoplay
-        // autoplayTimeout: 5000, // Set autoplay interval in milliseconds (e.g., 5000ms = 5 seconds)
-        // autoplayHoverPause: true
+        autoplay: true, // Enable autoplay
+        autoplayTimeout: 5000, // Set autoplay interval in milliseconds (e.g., 5000ms = 5 seconds)
+        autoplayHoverPause: true
       });
     });
   </script>
